[gd_scene load_steps=7 format=2]

[ext_resource path="res://player_hurt.tres" type="Animation" id=1]
[ext_resource path="res://scripts/combat.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=3]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 1 )
ProgressBar/styles/fg = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "enemy_hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.153893, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 4.28709, 1 ),
"update": 0,
"values": [ Vector2( 129.5, 29.002 ), Vector2( 115.641, 29.002 ), Vector2( 129.5, 29.002 ), Vector2( 143.359, 29.002 ), Vector2( 129.5, 29.002 ) ]
}

[node name="Combat" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.701961, 0.0862745, 0.0862745, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -74.1704
margin_right = 30.5
margin_bottom = -3.17043
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 182.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "Enemy"

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_top = 6.0
margin_right = 300.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 18.0
step = 1.0
value = 18.0
percent_visible = false

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 39.0
margin_bottom = 14.0
text = "Player"

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 43.0
margin_top = 6.0
margin_right = 300.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 18.0
step = 1.0
value = 18.0
percent_visible = false

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 110.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 42.0
margin_right = 148.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_right = 148.0
margin_bottom = 14.0
text = "Attack Buffer"
align = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
align = 1
clip_text = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 152.0
margin_top = 42.0
margin_right = 300.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
margin_right = 148.0
margin_bottom = 14.0
text = "Next, do"
align = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
align = 1
clip_text = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 128.0
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 32.0
margin_bottom = 14.0
text = "Time"

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 36.0
margin_top = 6.0
margin_right = 300.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0
percent_visible = false

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 136.0

[node name="Moves" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 300.0
margin_bottom = 172.0
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/Moves"]
margin_right = 148.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/Moves/VBoxContainer"]
margin_right = 148.0
margin_bottom = 14.0
text = "Punch"
align = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/Moves/VBoxContainer"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
text = "W A S D"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/Moves"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/Moves/VBoxContainer2"]
margin_right = 148.0
margin_bottom = 14.0
text = "Kick"
align = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/Moves/VBoxContainer2"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
text = "I L K J"
align = 1

[node name="GameOver" type="MarginContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/GameOver"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 182.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver/CenterContainer"]
margin_left = 123.0
margin_top = 67.0
margin_right = 176.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="Control/GameOver/CenterContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 14.0
text = "You win!"

[node name="Button" type="Button" parent="Control/GameOver/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 53.0
margin_bottom = 38.0
text = "quit"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
__meta__ = {
"_editor_description_": ""
}

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/player_hurt = ExtResource( 1 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/enemy_hurt = SubResource( 4 )

[connection signal="pressed" from="Control/GameOver/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
